# passsssword

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
.github/workflows/: checks-testing.yml  code-cov.yml
docs/: README.md
src/: passsssword.py
tests/: test_passsssword.py
